recursion.cons.butlast.ButLast.scala.error
Compilation error:
ButLast:6: error: value :: is not a member of Int
    return butLast(l.tail)::l.head
                          ^